Custom Typeface, Size and Weight
Decreased the size of the meter text and added a custom typeface. At
the moment I'm using a typeface I found on Adobe. When I make this open
source I'll try to find one similar.

--- a/rainmeter/bd1/Flow/Flow.ini
+++ b/rainmeter/bd1/Flow/Flow.ini
@@ -15,8 +15,10 @@ MeterStyle=TextStyle | StyleRightAlign
 MeasureName=MeasureFlow
 X=10
 Y=130
-FontSize=16
+FontSize=12
 FontColor=255,255,255,255
+FontFace=Magistral
+FontWeight=600 ; Medium
 Text=Flow: %1 L/h
 
 ; [-- Histogram --]
@@ -27,7 +29,7 @@ MeasureName=MeasureFlow
 X=r
 Y=R
 H=18
-W=160
+W=130
 PrimaryColor=0,255,0,255
 GraphStart=Right
 AutoScale=1
