--- a/rainmeter/bd1/Temps/Temps.ini
+++ b/rainmeter/bd1/Temps/Temps.ini
@@ -15,8 +15,10 @@ MeterStyle=TextStyle | StyleRightAlign
 MeasureName=MeasureCPUTemp
 X=10
 Y=10
-FontSize=16
+FontSize=12
 FontColor=255,255,255,255
+FontFace=Magistral
+FontWeight=600 ; Medium
 Text=CPU: %1[\xB0]C
 
 ; [-- GPU --]
@@ -33,8 +35,10 @@ MeterStyle=TextStyle | StyleRightAlign
 MeasureName=MeasureGPUTemp
 X=10
 Y=40
-FontSize=16
+FontSize=12
 FontColor=255,255,255,255
+FontFace=Magistral
+FontWeight=600 ; Medium
 Text=GPU: %1[\xB0]C
 
 ; [-- Water --]
@@ -51,8 +55,10 @@ MeterStyle=TextStyle | StyleRightAlign
 MeasureName=MeasureWaterOutTemp
 X=10
 Y=70
-FontSize=16
+FontSize=12
 FontColor=255,255,255,255
+FontFace=Magistral
+FontWeight=600 ; Medium
 Text=Water: %1[\xB0]C
 
 [MeasureWaterInTemp]
@@ -67,6 +73,8 @@ MeterStyle=TextStyle | StyleRightAlign
 MeasureName=MeasureWaterInTemp
 X=10
 Y=100
-FontSize=16
+FontSize=12
 FontColor=255,255,255,255
+FontFace=Magistral
+FontWeight=600 ; Medium
 Text=Water: %1[\xB0]C
